--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "real time chat application",
   "main": "index.js",
   "scripts": {
-    "install-server": "cd backend && npm install",
-    "start-server": "cd backend && npm start",
-    "install-client": "cd client && npm install",
-    "build-client": "cd client && npm run build",
-    "start-client": "cd client && npm run start"
+    "install-server": "cd server && npm install",
+    "start-server": "cd server && npm start",
+    "install-client": "cd clients && npm install",
+    "build-client": "cd clients && npm run build",
+    "start-client": "cd clients && npm run start"
   },
   "author": "devansh",
   "license": "ISC"
