--- a/clients/package.json
+++ b/clients/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "caniuse-lite": "^1.0.30001651",
     "dotenv": "^16.0.3",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^10.12.18",
